--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/landmarkgoicon"
+        android:label="LandmarkGo"
+        android:roundIcon="@drawable/landmarkgoicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.OPSC7312Assignment"
         tools:targetApi="31">
@@ -34,14 +34,14 @@
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
-                android:value="" />
+                android:value=""/>
         </activity>
         <activity
             android:name=".Favorites"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
-                android:value="" />
+                android:value=""/>
         </activity>
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
